Fix CSS formatting for text alignment

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,2 +1,3 @@
  .hx\: leading-7 {
-    text-align: justify}
+       text-align: justify
+ }
